<resources>
    <string name="app_title">Uni Letter</string>
    <string name="app_name">Uni Letter</string>

    <string name="text_select1_bold">"<b>"필수정보"</b>"</string>
    <string name="text_select1">필수정보</string>
    <string name="text_select2_bold">"<b>"내용 입력"</b>"</string>
    <string name="text_select2">내용 입력</string>
    <string name="text_title">제목을 입력해주세요.</string>
    <string name="text_host">소속된 단체를 입력하세요.</string>
    <string name="text_host_example">(ex.총학생회,컴퓨터공학부)</string>
    <string name="text_classification">분류를 선택하세요.</string>
    <string name="text_date">모집기간을 선택해주세요</string>
    <string name="text_time">진행시간을 선택해주세요</string>
    <string name="text_target">행사 대상을 입력하세요.</string>
    <string name="text_cancel">취소</string>
    <string name="text_next">다음</string>
    <string name="text_empty">없음</string>
    <string name="text_same">위와 동일</string>
    <string name="text_content">내용을 입력해주세요.</string>
    <string name="text_before">이전</string>
    <string name="text_complete">완료</string>
    <string name="text_notice_image">없음 선택시 유니레터가 제공하는 이미지가\n등록됩니다</string>
    <string name="text_edit">수정하기</string>
    <string name="text_location">신청 링크 또는 장소를 입력해 주세요</string>
    <string name="text_notice_max">800자 이내로 입력 가능합니다.</string>
    <string name="text_delete">삭제</string>
    <string name="text_input">댓글을 입력해주세요. </string>
    <string name="text_url">첨부할 URL이 있다면 입력해주세요.</string>
    <string name="text_notice_a4">A4규격의 이미지를 등록해주세요</string>
    <string name="text_letter_input">레터입력</string>
    <string name="text_detail_letter">상세레터</string>
    <string name="text_picture_registration">사진등록</string>
    <string name="text_writer">글쓴이</string>
    <string name="image_url" formatted="false">"http://uniletter.inuappcenter.kr/images/%s"</string>

    <string name="detail_content">위하여 물방아 작고 옷을 청춘 따뜻한 낙원을 이상의 피부가 봄바람이다. 인도하겠다는 할지니, 몸이 청춘에서만 튼튼하며, 발휘하기 천고에 끝까지 것이다. 대중을 인류의 살았으며, 같은 유소년에게서 반짝이는 보라. 용기가 그들에게 꽃 소담스러운 위하여 광야에서 능히 칼이다. 곧 생의 꾸며 수 쓸쓸하랴? 눈에 없으면 소금이라 이것은 아름다우냐? 끓는 들어 대고, 밝은 있는 있으랴? 같은 속에 꽃 곧 할지니, 생명을 사막이다. 이상을 열락의 이성은 없는 인간이 사랑의 피는 보내는 아니다. 이상의 인류의 반짝이는 능히 가진 노래하며 위하여 것이다. 있는 따뜻한 곳으로 수 끓는다.
\n
\n있음으로써 풀이 길지 오직 위하여서. 천고에 희망의 갑 싶이 같은 동력은 피고, 봄바람이다. 착목한는 관현악이며, 굳세게 힘차게 싶이 가진 철환하였는가? 사랑의 수 얼마나 길지 청춘의 꽃이 있으랴? 뜨고, 열매를 되려니와, 아름답고 가슴에 운다. 목숨이 하여도 일월과 무엇을 이성은 봄날의 것이 할지라도 천자만홍이 교향악이다. 아름답고 온갖 위하여서 수 길을 쓸쓸하랴? 시들어 속에서 원질이 것이 생의 그들에게 뜨거운지라, 온갖 것이다. 오아이스도 그것을 피가 철환하였는가? 청춘의 뛰노는 앞이 청춘의 아니다. 인간은 피고 쓸쓸한 청춘의 피가 있는가?
\n
\n용감하고 예수는 심장은 그들은 것이다. 품었기 피어나기 하였으며, 때문이다. 인생을 갑 싸인 현저하게 품에 있다. 그들은 뜨거운지라, 군영과 충분히 노래하며 끓는다. 황금시대를 길을 것은 평화스러운 얼음이 그들은 가치를 꽃이 하는 아니다. 청춘의 찾아 관현악이며, 그들을 쓸쓸하랴? 싸인 예수는 발휘하기 바이며, 때문이다. 우리의 구하기 살 그들을 위하여, 봄바람이다. 온갖 찬미를 생명을 꾸며 피어나는 것이다.</string>

    <string name="event_period" formatted="false">%s - %s</string>
    <string name="event_save_comments" formatted="false">저장%s • 댓글%s개</string>
    <string name="group" formatted="false">%s | %s</string>

    <string name="comment">댓글</string>
    <string name="event_registration">레터등록</string>
    <string name="event_preview">미리보기</string>
    <string name="event_read">읽어보기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">댓글 메뉴</string>


    <string name="alarm_on_title_start">시작 전 알림신청</string>
    <string name="alarm_on_title_last">마감 전 알림신청</string>
    <string name="alarm_on_title_information">알림 기준</string>
    <string name="alarm_on_title_block">정지 알림</string>
    <string name="alarm_on_content_start">시작 전 알림 신청이 완료 되었습니다\n행사 5분전에 알림 드릴게요 :)</string>
    <string name="alarm_on_content_last">마감 전 알림 신청이 완료 되었습니다\n마감 하루전에 푸쉬 드릴게요 :)</string>
    <string name="alarm_on_content_information">유니레터의 두가지 알림 기준입니다\n\n시작 전 알림:행사 시작 5분전에 알림\n마감 전 알림:행사 마감 하루전에 알림</string>
    <string name="alarm_on_content_block">사용자 다수의 신고로\n글작성과 댓글작성이 정지되었습니다.</string>
    <string name="alarm_off_title">알림취소</string>
    <string name="alarm_off_content">알림이 취소 되었습니다\nㅠ0ㅠ"</string>
    <string name="button_cancel">취소</string>
    <string name="hintText_body">허위 게시물이나 부적절한 언어 사용시\n유니레터 이용이 어려울 수 있습니다.</string>
</resources>