<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="org.inu.events.viewmodel.TempRegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_detail_letter"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/text_content"
            android:textColor="@color/black1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail" />

        <EditText
            android:id="@+id/editText_body"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginHorizontal="@dimen/register_horizontal_margin"
            android:layout_marginTop="4dp"
            android:background="@drawable/drawable_edit_text_background"
            android:hint="@string/hintText_body"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:text="@={viewModel.body}"
            android:textSize="16sp"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_content" />

        <TextView
            android:id="@+id/textView_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_horizontal_margin"
            android:layout_marginTop="12dp"
            android:text="@string/text_notice_max"
            android:textColor="@color/black7"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_body" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
