<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="org.inu.events.ui.register.tmp.TempRegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.tmp.TempRegisterActivity">

        <org.inu.events.ui.util.toolbar.UniLetterToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/event_registration" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/button_before"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_before"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/drawable_btn_background"
            android:backgroundTint="@color/primary_base"
            android:onClick="@{()->viewModel.onPrevious()}"
            android:paddingVertical="14dp"
            android:text="@string/text_cancel"
            android:textColor="@color/primary100"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_complete"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_complete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/drawable_btn_background"
            android:backgroundTint="@color/primary100"
            android:onClick="@{()->viewModel.onClickNext()}"
            android:paddingVertical="14dp"
            android:text="@string/text_next"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_before" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
