<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="org.inu.events.viewmodel.TempViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_image_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_picture_registration"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageButton_postImage"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/img_btn_background"
            android:clickable="@{!viewModel.imageCheckBoxBoolean}"
            android:contentDescription="@string/text_notice_image"
            android:onClick="@{ () -> viewModel.onImageButtonClick()}"
            android:scaleType="centerInside"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_image_registration"
            app:strokeColor="@color/black30"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/home_imageView"
                imageFromUrl="@{viewModel.imageUrl}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/cardview_member"
                app:layout_constraintEnd_toEndOf="@+id/cardview_member"
                app:layout_constraintStart_toStartOf="@+id/cardview_member"
                app:layout_constraintTop_toTopOf="@+id/cardview_member"
                tools:src="@drawable/img_default" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="8dp"
            android:text="@string/text_notice_image"
            android:textColor="@color/black7"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/imageButton_postImage"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/checkBox_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/text_empty"
            android:textColor="@color/black7"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/checkBox_image"
            app:layout_constraintTop_toTopOf="@id/textView_Info" />

        <CheckBox
            android:id="@+id/checkBox_image"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:background="@drawable/custom_checkbox"
            android:button="@null"
            android:checked="@={viewModel.imageCheckBoxBoolean}"
            android:onClick="@{() -> viewModel.onImageCheckBoxClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView_Info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
